--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,15 @@
 <h1>新しい投稿</h1>
 <%= form_for :post, url: posts_path do |f| %>
+    <% if @post.errors.any? %>
+        <div id="error_explanation">
+            <h2><%= @post.errors.count %>件のエラーが発生したため保存ができませんでした。</h2>
+            <ul>
+                <% @post.errors.full_messages.each do |msg| %>
+                    <li><%= msg %></li>
+                <% end %>
+            </ul>
+        </div>
+    <% end %>
     <p>
       <%= f.label :title, "タイトル" %><br>
       <%= f.text_field :title %>
